add records saving, add schemas, update documentation
