# src/routes/records.js
@@ -1,8 +1,10 @@
+const helpers = require('../plugins/db/helpers.js')
+
 const getSchema = {
   schema: {
     response: {
       200: {
-        $ref: 'training-get-200.json'
+        $ref: 'records-get-200.json'
       }
     }
   }
@@ -11,7 +13,7 @@ const getSchema = {
 const postSchema = {
   schema: {
     body: {
-      $ref: 'training-add-body.json'
+      $ref: 'record-body-data.json'
     },
     params: {
       type: 'object',
@@ -25,22 +27,22 @@ const postSchema = {
   }
 }
 
-const routines = async function (fastify, options, next) {
-  fastify.get('/', async function (req, rep) {
-    const routines = await this.db.getTrainings(this.mongo.db)
+const records = async function (fastify, options, next) {
+  fastify.get('/', postSchema, async function (req, rep) {
+    const routines = await this.db.getRecords(this.mongo.db)
     rep.code(200).send(routines)
   })
 
   fastify.post('/:id', postSchema, async function (req, rep) {
-    const res = await this.db.addTraining(this.mongo.db, req.body)
+    const res = await helpers.defineRecord(this.db, this.mongo.db, req.body)
     rep.code(200).send(res)
   })
 
   fastify.get('/delete', async function (req, rep) {
-    const res = await this.db.dropTrainings(this.mongo.db)
+    const res = await this.db.dropRecords(this.mongo.db)
     rep.code(200).send(res)
   })
   next()
 }
 
-module.exports = routines
+module.exports = records
